III-639: add /place/{cdbid}/permission
