# src/PlacesControllerProvider.php
@@ -28,7 +28,8 @@ class PlacesControllerProvider implements ControllerProviderInterface
                     $app['place_service'],
                     $app['place_editing_service'],
                     $app['event_relations_repository'],
-                    $app['current_user']
+                    $app['current_user'],
+                    $app['place.security']
                 );
             }
         );
@@ -86,6 +87,7 @@ class PlacesControllerProvider implements ControllerProviderInterface
         $controllers->post('place/{cdbid}/facilities', 'places_controller:updateFacilities');
         $controllers->post('place/{cdbid}/organizer', 'places_controller:updateOrganizer');
         $controllers->delete('place/{cdbid}/organizer/{organizerId}', 'places_controller:deleteOrganizer');
+        $controllers->get('place/{cdbid}/permission', 'places_controller:hasPermission');
 
         $controllers->get(
             'place/{cdbid}',
